{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 310,
  "lineage": "47742819-21f7-628c-6ea1-4cd07dbd09ec",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/external_lb/frontendIPConfigurations/publicipadress",
                "name": "publicipadress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/publicIPAddresses/publicip-extlb"
              }
            ],
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/external_lb",
            "location": "uksouth",
            "name": "external_lb",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/internal_lb/frontendIPConfigurations/privateIPAddress",
                "name": "privateIPAddress",
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02"
              }
            ],
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/internal_lb",
            "location": "uksouth",
            "name": "internal_lb",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_virtual_network.test",
            "azurerm_resource_group.test",
            "azurerm_subnet.test2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/external_lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/external_lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.test1",
            "azurerm_public_ip.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/internal_lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/loadBalancers/internal_lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.test2",
            "azurerm_resource_group.test",
            "azurerm_subnet.test2",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkInterfaces/fgtvm-a_nic1",
            "internal_domain_name_suffix": "ngyb41zkwroujddwxib1bujobf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01"
              }
            ],
            "location": "uksouth",
            "mac_address": "60-45-BD-0E-83-28",
            "name": "fgtvm-a_nic1",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "virtual_machine_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Compute/virtualMachines/fgt_activevm_a"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkInterfaces/fgtvm-a_nic2",
            "internal_domain_name_suffix": "ngyb41zkwroujddwxib1bujobf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration",
                "primary": true,
                "private_ip_address": "10.1.0.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01"
              }
            ],
            "location": "uksouth",
            "mac_address": "60-45-BD-0E-83-C4",
            "name": "fgtvm-a_nic2",
            "private_ip_address": "10.1.0.7",
            "private_ip_addresses": [
              "10.1.0.7"
            ],
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "virtual_machine_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Compute/virtualMachines/fgt_activevm_b"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkInterfaces/fgtvm-b_nic1",
            "internal_domain_name_suffix": "ngyb41zkwroujddwxib1bujobf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration",
                "primary": true,
                "private_ip_address": "10.1.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01"
              }
            ],
            "location": "uksouth",
            "name": "fgtvm-b_nic1",
            "private_ip_address": "10.1.0.5",
            "private_ip_addresses": [
              "10.1.0.5"
            ],
            "resource_group_name": "az-cus-rg-orbcnt-hub"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkInterfaces/fgtvm-b_nic2",
            "internal_domain_name_suffix": "ngyb41zkwroujddwxib1bujobf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration",
                "primary": true,
                "private_ip_address": "10.1.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01"
              }
            ],
            "location": "uksouth",
            "name": "fgtvm-b_nic2",
            "private_ip_address": "10.1.0.6",
            "private_ip_addresses": [
              "10.1.0.6"
            ],
            "resource_group_name": "az-cus-rg-orbcnt-hub"
          },
          "dependencies": [
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicnetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkSecurityGroups/Public-NSG",
            "location": "uksouth",
            "name": "Public-NSG",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "security_rule": [
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/networkSecurityGroups/Public-NSG/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "Public-NSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.publicnetworknsg",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/publicIPAddresses/publicip-extlb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.213.100",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "publicip-extlb",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/routeTables/internal-route",
            "location": "uksouth",
            "name": "internal-route",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "example",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [
              "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01",
            "name": "az-cus-sn130-hub-fgt01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "virtual_network_name": "az-cus-vn130-hub"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02",
            "name": "az-cus-sn130-hub-fgt02",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "virtual_network_name": "az-cus-vn130-hub"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02",
            "route_table_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/routeTables/internal-route",
            "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_route_table.example",
            "azurerm_subnet.test2",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6f1fb069-b42a-445d-8c76-ba03b0d12e0d",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub",
            "location": "uksouth",
            "name": "az-cus-vn130-hub",
            "resource_group_name": "az-cus-rg-orbcnt-hub",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt01",
                "name": "az-cus-sn130-hub-fgt01"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/az-cus-rg-orbcnt-hub/providers/Microsoft.Network/virtualNetworks/az-cus-vn130-hub/subnets/az-cus-sn130-hub-fgt02",
                "name": "az-cus-sn130-hub-fgt02"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}